replace underscores with dashes in equation label names

--- a/04-MY451_4.rmd
+++ b/04-MY451_4.rmd
@@ -156,9 +156,9 @@ independent** when there is no association between them, and
 “statistically” is omitted, and we talk simply of variables being
 independent or dependent. In this language, the null hypothesis of the
 $\chi^{2}$ test of independence is that
-$$H_{0}: \;\text{The variables are statistically independent in the
+\begin{equation}H_{0}: \;\text{The variables are statistically independent in the
 population}.
-\label{eq:H0_chi2}$$ In our example the null hypothesis is thus that a
+\label{eq:H0-chi2}\end{equation} In our example the null hypothesis is thus that a
 person’s sex and his or her attitude toward income redistribution are
 independent in the population of adults in the UK.
 
@@ -186,9 +186,9 @@ the opposite of the null hypothesis, which indicates the kinds of
 observations that will be taken as evidence against $H_{0}$. For the
 $\chi^{2}$ test of independence this is simply the logical opposite of
 (\@ref(H0-chi2)),
-i.e. $$H_{a}: \;\text{The variables are not statistically independent in the
+i.e. \begin{equation}H_{a}: \;\text{The variables are not statistically independent in the
 population}.
-\label{eq:Ha_chi2}$$ In terms of conditional distributions, $H_{a}$ is that
+\label{eq:Ha-chi2}\end{equation} In terms of conditional distributions, $H_{a}$ is that
 the conditional distributions of one variable given the other are not
 all identical, i.e. that for at least one pair of levels of the
 explanatory variable the conditional probabilities of at least one
@@ -377,8 +377,8 @@ test statistic for this example are shown in Table
     $f_{e}$ themselves.
 
 -   Finally, aggregating these quantities to get the $\chi^{2}$ test
-    statistic $$\chi^{2} = \sum \frac{(f_{o}-f_{e})^{2}}{f_{e}}.
-    \label{eq:chi2}$$ Here the summation sign $\Sigma$ indicates that
+    statistic \begin{equation}\chi^{2} = \sum \frac{(f_{o}-f_{e})^{2}}{f_{e}}.
+    \label{eq:chi2}\end{equation} Here the summation sign $\Sigma$ indicates that
     $\chi^{2}$ is obtained by adding up the quantities
     $(f_{o}-f_{e})^{2}/f_{e}$ across all the cells of the table.
 
