--- a/06-MY451_6.rmd
+++ b/06-MY451_6.rmd
@@ -55,12 +55,12 @@ consider specific characteristics of the distribution, i.e. its
 *parameters* in the sense introduced in Section
 \@ref(s-probs-distribution). For the distribution of a continuous
 variable, the most important parameters are the **population mean**
-$$\mu=\frac{\sum Y_{i}}{N}
-\label{eq:mu}$$ and the **population variance**
-$$\sigma^{2} = \frac{\sum (Y_{i}-\mu)^{2}}{N}
-\label{eq:sigma2}$$ or, instead of the variance, the **population standard
-deviation** $$\sigma = \sqrt{\frac{\sum (Y_{i}-\mu)^{2}}{N}}.
-\label{eq:sigma}$$ Here $\mu$ and $\sigma$ are the lower-case Greek letters
+\begin{equation}\mu=\frac{\sum Y_{i}}{N}
+\label{eq:mu}\end{equation} and the **population variance**
+\begin{equation}\sigma^{2} = \frac{\sum (Y_{i}-\mu)^{2}}{N}
+\label{eq:sigma2}\end{equation} or, instead of the variance, the **population standard
+deviation** \begin{equation}\sigma = \sqrt{\frac{\sum (Y_{i}-\mu)^{2}}{N}}.
+\label{eq:sigma}\end{equation} Here $\mu$ and $\sigma$ are the lower-case Greek letters
 “mu” and “sigma” respectively, and $\sigma^{2}$ is read “sigma squared”.
 It is common to use Greek letters for population parameters, as we did
 also for the probability parameter $\pi$ in Chapter \@ref(c-probs).
@@ -87,12 +87,12 @@ both, so we can here ignore the distinction without further comment.
 The population formulas (\@ref(mu})–(\ref{sigma)) clearly resemble those
 of some sample statistics introduced in Chapter \@ref(c-descr1),
 specifically the *sample* mean, variance and standard deviation
-$$\begin{aligned}
+\begin{aligned}
 \bar{Y}&=&\frac{\sum Y_{i}}{n}, \label{eq:Ybar_ch6} \\
 s^{2} &=& \frac{\sum (Y_{i}-\bar{Y})^{2}}{n-1} \text{and}
 \label{eq:s2_ch6} \\
 s &=& \sqrt{\frac{\sum (Y_{i}-\bar{Y})^{2}}{n-1}}
-\label{eq:s_ch6}\end{aligned}$$ where the sums are now over the $n$
+\label{eq:s_ch6}\end{aligned} where the sums are now over the $n$
 observations in a sample. These can be used as descriptions of the
 sample distribution as discussed in Chapter \@ref(c-descr1), but also as
 *point estimates* of the corresponding population parameters in the
@@ -130,8 +130,8 @@ estimators certain mathematically desirable properties ($s^{2}$ is an
 *unbiased* estimate of $\sigma^{2}$, but $\hat{\sigma}^{2}$ below is
 not). This detail need not concern us here. In fact, the statistics
 which use $n$ instead,
-i.e. $$\hat{\sigma}^{2}=\frac{\sum (Y_{i}-\bar{Y})^{2}}{n}
-\label{eq:s2b}$$ for $\sigma^{2}$ and
+i.e. \begin{equation}\hat{\sigma}^{2}=\frac{\sum (Y_{i}-\bar{Y})^{2}}{n}
+\label{eq:s2b}\end{equation} for $\sigma^{2}$ and
 $\hat{\sigma}=\sqrt{\hat{\sigma}^{2}}$ for $\sigma$, are also sensible
 estimates and very similar to $s^{2}$ and $s$ unless $n$ is very small.
 In general, there are often several possible sample statistics which
@@ -358,8 +358,8 @@ answer is “with a computer”. However, to explain an approach which is
 required for this in some computer packages and also to provide an
 alternative method which does not require a computer, we need to
 introduce one more new quantity. This is the **Z score**, which is
-defined as $$Z = \frac{Y-\mu}{\sigma}
-\label{eq:Zscore}$$ where $Y$ can be any value of the variable of interest.
+defined as \begin{equation}Z = \frac{Y-\mu}{\sigma}
+\label{eq:Zscore}\end{equation} where $Y$ can be any value of the variable of interest.
 For example, in the blood pressure example the $Z$ scores corresponding
 to values 60 and 90 are $Z=(60-74.2)/11.3=-1.26$ and
 $Z=(90-74.2)/11.3=1.40$ respectively. The $Z$ score can be interpreted
@@ -607,10 +607,10 @@ variables with $\text{E}(Y_{nj})=0$ and
 $\text{var}(Y_{nj})=\sigma^{2}_{nj}$. Let $Z_{n}=\sum_{j=1}^{n} Y_{nj}$,
 and let $B^{2}_{n}=\text{var}(Z_{n})=\sum_{j=1}^{n} \sigma^{2}_{nj}$.
 Suppose also that the following condition holds: for every $\epsilon>0$,
-$$\frac{1}{B_{n}^{2}}\,
+\begin{equation}\frac{1}{B_{n}^{2}}\,
 \sum_{j=1}^{n} \, \text{E}\{ Y_{nj}^{2} I(|Y_{nj}|\ge \epsilon B_{n})\}
 \rightarrow 0 \; \text{  as  } \; n\rightarrow \infty.
-\label{eq:lindeberg}$$ Then
+\label{eq:lindeberg}\end{equation} Then
 $Z_{n}/B_{n} \stackrel{\mathcal{L}}{\longrightarrow} N(0,1)$.
 
 No, that will not come up in the examination. The theorem is given here
